# terraform-aws-ecs-saver

./: .gitignore  .tool-versions  LICENSE  README.md  cloudwatch.tf  iam.tf  lambda.tf  lambda_layer.tf  locals.tf  providers.tf  renovate.json5  variables.tf
.github/actions/setup-poetry/: action.yml
.github/actions/setup-terraform/: action.yml
.github/actions/setup-tools/: action.yml
.github/workflows/: .terraform.lock.hcl  main.tf  renovate.yml  test.yml
lambda/: pyproject.toml  requirements.txt
lambda/scripts/: create_lambda_layer.sh
lambda/src/: function.py  test_function.py
