[tool.poetry]
name = "ecs-saver"
version = "0.1.0"
description = ""
authors = ["Tomohiko Ozawa <kota65535@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
boto3 = "1.26.58"
pytz = "2022.7.1"


[tool.poetry.group.dev.dependencies]
black = "23.12.1"
isort = "5.12.0"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
