[tool.poetry]
name = "ecs-saver"
version = "0.2.0"
description = ""
authors = ["Tomohiko Ozawa <kota65535@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.14.0"
boto3 = "1.40.50"
pytz = "2025.2"


[tool.poetry.group.dev.dependencies]
black = "22.12.0"
isort = "5.13.2"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
